# pimpl-template

./: .gitignore  CMakeLists.txt  LICENSE  README.md
core/: CMakeLists.txt
core/include/: global.h  pimpl.h
example/: CMakeLists.txt  main.cpp  object.cpp  object.h  object_p.h  point2d.cpp  point2d.h  point2d_p.h
